--- a/src/styles/monthBody.scss
+++ b/src/styles/monthBody.scss
@@ -2,7 +2,7 @@
 }
 
 .month-body__cell-head {
-  font-size: 0.8em;
+  font-size: 12px;
 }
 
 .month-body__cell-head,
